--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ site_author: Remko de Knikker
 repo_name: appmod101
 repo_url: https://remkohdev.github.io/appmod101
 edit_uri: edit/main/docs
+docs_dir: docs
 
 # Navigation
 nav:
