--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ nav:
   - Kube 101:
     - Lab 1. Deploy your first application: generatedContent/kube101/Lab1/README.md
     - Lab 2. Scale and update deployments: generatedContent/kube101/Lab2/README.md
-    - Lab 3. Build multi-tier applications: generatedContent/kube101/Lab3/README.md
+    - Lab 3. Managing Data: generatedContent/kube101/Lab3/README.md
   - Helm 101:
     - Lab 1. Deploy with Helm: generatedContent/helm101/Lab1/README.md
     - Lab 2. Make changes with Helm: generatedContent/helm101/Lab2/README.md
