--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,13 +22,13 @@ nav:
     - IBM Cloud Shell: generatedContent/workshop-setup/CLOUDSHELL.md
     - Helm v3: generatedContent/workshop-setup/HELM.md
   - Docker 101:
-    - Lab 1. Deploy your first application: generatedContent/docker101/lab-1/README.md
-    - Lab 2. Scale and update deployments: generatedContent/docker101/lab-2/README.md
-    - Lab 3. Build multi-tier applications: generatedContent/docker101/lab-3/README.md
+    - Lab 1. Run your First Container: generatedContent/docker101/lab-1/README.md
+    - Lab 2. Create Custom Images: generatedContent/docker101/lab-2/README.md
+    - Lab 3. Manage Data in Containers: generatedContent/docker101/lab-3/README.md
   - Kube 101:
     - Lab 1. Deploy your first application: generatedContent/kube101/Lab1/README.md
     - Lab 2. Scale and update deployments: generatedContent/kube101/Lab2/README.md
-    - Lab 3. Managing Data: generatedContent/kube101/Lab3/README.md
+    - Lab 3. Build multi-tier applications: generatedContent/kube101/Lab3/README.md
   - Helm 101:
     - Lab 1. Deploy with Helm: generatedContent/helm101/Lab1/README.md
     - Lab 2. Make changes with Helm: generatedContent/helm101/Lab2/README.md
